# answer

./: .gitattributes  README.md  开发日志.md  设计文档.md  项目日志.md  项目规范.md
Canonical Answer/: CMakeLists.txt  Canonical_Answer.h.in  Config.h  main.c
Canonical Answer/Functions/: CMakeLists.txt  Functions.h  buy.c  buy.h  goods.c  goods.h  screen.c  screen.h  shopping.c  shopping.h
Canonical Answer/Functions/buy/: coin_buy.h
Canonical Answer/data/: CMakeLists.txt  data.c  data.h  data_init.h  database.db
Canonical Answer/include/: CMakeLists.txt  Config.h  io.c  io.h
Canonical Answer/src/: main.c
Test-based-answer/: CMakeLists.txt
Test-based-answer/src/: level2-2.c  level2-2.h
